# image-compressor

./: .gitignore  CMakeLists.txt  README.md
src/: bitmap.cpp  bitmap.h  chroma.cpp  chroma.h  color.cpp  color.h  dct.cpp  dct.h  decode.cpp  decode.h  encode.cpp  encode.h  format.h  main.cpp  make_test_image.cpp  quant.cpp  quant.h  rle.cpp  rle.h  zigzag.h
